--- a/main.css
+++ b/main.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Fredoka+One');
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -7,15 +8,46 @@ html {
   height: 100%;
 }
 body {
-  font-family: 'Ubuntu', sans-serif;
+  font-family: 'Fredoka One', cursive;
   font-size: 1.6rem;
   line-height: 1.5;
   margin: 0;
   background-color: #fff;
-  color: #2196f3;
+  color: #fff;
   position: relative;
   min-height: 100%;
   padding-bottom: 20rem;
+}
+.container {
+  height: 100%;
+  height: 100vh;
+  width: 100%;
+  position: relative;
+  overflow: hidden;
+}
+.container:after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 300%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: linear-gradient(135deg, red 0%, purple 50%, blue 100%);
+  -webkit-animation: bg 7s infinite linear;
+          animation: bg 7s infinite linear;
+  z-index: -1;
+}
+@-webkit-keyframes bg {
+  50% {
+    top: -200%;
+  }
+}
+@keyframes bg {
+  50% {
+    top: -200%;
+  }
 }
 h1, h2, h3, ul, p {
   margin: 0;
@@ -38,8 +70,63 @@ a:hover {
 .header {
   text-align: center;
   padding: 2rem;
-  background-color: #2196f3;
   color: #fff;
+}
+.page-heading span {
+  display: inline-block;
+  font-size: 70px;
+  color: #F44336;
+  text-shadow:  1px 1px #1A237E,
+                2px 2px #1A237E,
+                3px 3px #1A237E,
+                4px 4px #1A237E,
+                5px 5px #1A237E,
+                6px 6px #1A237E,
+                7px 7px #1A237E,
+                8px 8px #1A237E,
+                9px 9px #1A237E,
+                10px 10px #1A237E;
+}
+
+.page-heading span:nth-child(1) {
+  -webkit-animation: shadow .7s linear infinite;
+          animation: shadow .7s linear infinite;
+}
+.page-heading span:nth-child(2) {
+  -webkit-animation: shadow .7s linear .3s infinite;
+          animation: shadow .7s linear .3s infinite;
+}
+.page-heading span:nth-child(3) {
+  -webkit-animation: shadow .7s linear .6s infinite;
+          animation: shadow .7s linear .6s infinite;
+}
+.page-heading span:nth-child(4) {
+  -webkit-animation: shadow .7s linear .9s infinite;
+          animation: shadow .7s linear .9s infinite;
+}
+.page-heading span:nth-child(5) {
+  -webkit-animation: shadow .7s linear 1.2s infinite;
+          animation: shadow .7s linear 1.2s infinite;
+}
+.page-heading span:nth-child(6) {
+  -webkit-animation: shadow .7s linear 1.5s infinite;
+          animation: shadow .7s linear 1.5s infinite;
+}
+
+@-webkit-keyframes shadow {
+  50% {
+    text-shadow: 0px 0px 0px #000;
+    -webkit-transform: translate(11px, 11px);
+            transform: translate(11px, 11px);
+  }
+}
+
+@keyframes shadow {
+  50% {
+    text-shadow: 0px 0px 0px #000;
+    -webkit-transform: translate(11px, 11px);
+            transform: translate(11px, 11px);
+  }
 }
 .main >.wrapper {
   display: -webkit-box;
@@ -60,7 +147,6 @@ a:hover {
 .footer {
   padding: 2rem;
   height: 20rem;
-  background-color: #2196f3;
   color: #fff;
   position: absolute;
   right: 0;
