--- a/main.css
+++ b/main.css
@@ -34,7 +34,7 @@ body {
   left: 0;
   right: 0;
   bottom: 0;
-  background: linear-gradient(135deg, red 0%, purple 50%, blue 100%);
+  background: lightskyblue linear-gradient(135deg, red 0%, purple 50%, blue 100%);
   -webkit-animation: bg 7s infinite linear;
           animation: bg 7s infinite linear;
   z-index: -1;
